Fix overflow

--- a/style.css
+++ b/style.css
@@ -38,7 +38,7 @@
   background: #1c1a19;
   display: flex;
   flex-direction: column;
-  width: 100%;
+  width: 380px;
   background-image: url(./images/illustration-header-mobile.svg);
   background-repeat: no-repeat;
   background-position: right bottom;
@@ -172,7 +172,7 @@ li {
   }
 }
 
-.title h4{
+.title h4 {
   font-family: 'Crete Round', serif;
   padding-left: 20px;
   padding-top: 120px;
@@ -203,19 +203,6 @@ hr {
 .title {
   padding-left: 20px;
   padding-top: 120px;
-}
-
-.title h4 {
-  font-family: 'Crete Round', serif;
-  font-size: 40px;
-  line-height: 52px;
-}
-
-hr {
-  width: 325px;
-  margin-top: 50px;
-  border: 1px solid #212121;
-  margin-left: 20px;
 }
 
 .work1img {
@@ -439,7 +426,6 @@ hr {
   font-family: 'Meera Inimai', sans-serif;
   font-weight: 700;
   margin: 3rem 0;
-  font-weight: 700;
   font-size: 32px;
   line-height: 44px;
   letter-spacing: 0.1em;
